test_suite/alan-2022-examples/failing/004210_mutation.alan
source o begin leave . not E end
